--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,3 +11,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/SimpleShooter")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="SimpleShooterGameModeBase")
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Levels/Sandbox.Sandbox
+GameDefaultMap=/Game/Levels/Sandbox.Sandbox
+
